--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -34,7 +34,7 @@
             
 <img src="https://wallpaperaccess.com/full/410785.jpg" alt="MTB">
 
-<p>&copy;Mountain Biking Project</p>
+&copy;Mountain Biking Project</p>
         </ul>
     </body>
 
