--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -34,8 +34,12 @@
             
 <img src="https://wallpaperaccess.com/full/410785.jpg" alt="MTB">
 
-&copy;Mountain Biking Project</p>
+<p>&copy;Mountain Biking Project</p>
+
+
         </ul>
+
+        
     </body>
 
 </html>
