--- a/HTML5/about.html
+++ b/HTML5/about.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="container">
-    <header><img src="images/polar 4" alt="Page 2 Polar">
+    <header><img src="images/polar4" alt="Polar Express">
     </header>
  <nav>
 <a href="index.html">Home</a>
