--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="container">
     <header>
-        <img src="images/polar express 1.jpg" alt="Polar Express">
+        <img src="images/polar5.jpg" alt="Polar">
         <style>
             body {
                background-color: cadetblue;
@@ -33,7 +33,7 @@
         <h1>The Magic of The Polar Express</h1>
         <p>Welcome to the enchanting world of The Polar Express! Based on the beloved children’s book by Chris Van Allsburg, this heartwarming story takes readers and viewers on a magical journey to the North Pole. The narrative captures the imagination of children and adults alike, emphasizing the importance of belief and the spirit of Christmas. Whether you’re familiar with the original book, the animated film, or the holiday train rides inspired by the story, The Polar Express holds a special place in the hearts of many. Join us as we explore the story, characters, and the immersive experiences that make this tale a cherished holiday tradition. Dive into the wonder and excitement that The Polar Express brings to life!</p>
 
-        <img src="images/polar 2.png" alt="Polar">
+        <img src="images/Polar2.png" alt="Polar Express">
 
         <h2>The Story</h2>
         <p>At the center of The Polar Express is a young boy who embarks on a magical train ride on Christmas Eve, setting off to meet Santa Claus. As he boards the mysterious train, he finds himself surrounded by other children, each filled with anticipation and wonder. The journey is filled with whimsical adventures, from breathtaking views of snowy landscapes to heartwarming interactions with fellow passengers. Throughout the ride, the boy learns profound lessons about courage, friendship, and the importance of believing in the extraordinary. The story beautifully illustrates how faith in the magic of Christmas can lead to remarkable experiences. As the train chugs toward the North Pole, the boy's journey becomes a metaphor for the transition from childhood wonder to the challenges of growing up. Ultimately, it’s a celebration of the joy that belief can bring to our lives.</p>
@@ -63,10 +63,9 @@
              
             The Polar Express was published in 1985 and quickly became a classic in children's literature. Written and illustrated by Chris Van Allsburg, the book is renowned for its stunning illustrations that evoke the beauty and magic of winter. The intricate artwork captures the essence of a snowy night, creating an immersive experience for readers. The story has not only captivated young audiences but also won numerous accolades, including the prestigious Caldecott Medal, which recognizes outstanding children's picture books. Van Allsburg's masterful storytelling, combined with his detailed illustrations, creates a narrative that resonates with the imagination of children and adults alike. It encourages readers to hold onto their belief in magic and the joy of the holiday season. The book has since become a beloved holiday tradition, cherished by families around the world.</p>
 
-            <img src="images/polar 3.jpg" alt="Polar Express!">
+            <img src="images/polar3.jpg" alt="Polar Express!">
 
     </main>
-    <hr>
     <footer>
         &copy; 2024 Polar Express Project Page
     </footer>
