--- a/HTML5/about.html
+++ b/HTML5/about.html
@@ -21,17 +21,8 @@
         <p>In 2004, The Polar Express was brought to life in a groundbreaking animated film directed by Robert Zemeckis. Featuring Tom Hanks in multiple roles, the film utilized innovative motion capture technology to create a visually stunning experience that felt both magical and immersive. The animation brought the characters and snowy landscapes to life in a way that was unprecedented at the time, captivating audiences of all ages. The film closely follows the storyline of the book while expanding on the themes of belief, hope, and the spirit of Christmas. The addition of music, including the iconic song "Believe," composed by Glen Ballard and Alan Silvestri, adds a layer of emotion and warmth to the narrative. The film has not only introduced the story to a new generation but has also become a holiday staple for families, fostering a deeper connection to the original tale. Through its blend of technology and storytelling, The Polar Express continues to inspire a sense of wonder and nostalgia.</p>
 
         <img src="images/maxresdefault.jpg" alt="BTS">
-        <style>
-            body {
-               background-color: cadetblue;
-            }
-
-            img{
-               display: block;
-               margin: 20px auto;
-               width: 600px;
-            }
-       </style>
+        
+       <head>
 
 <h2>The Polar Express Train Rides</h2>
 <p>Across the country, various train experiences recreate the magic of The Polar Express, offering families a unique way to celebrate the holiday season. Many of these festive train rides operate from late November through December, inviting guests to board beautifully decorated trains reminiscent of the story. As families settle in, they are greeted with the comforting aroma of hot cocoa, adding to the immersive experience. The journey typically features lively storytelling, sing-alongs of holiday classics, and encounters with characters from the tale, including the Conductor and Santa himself. Each ride is designed to evoke the spirit of the book and film, making it a memorable adventure for children and adults alike. Beyond just a train ride, these experiences foster a sense of community and togetherness, allowing families to create cherished memories. For many, attending a Polar Express train ride becomes a beloved holiday tradition, passed down through generations.</p>
