--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -12,6 +12,7 @@
 <div id="container">
     <header>
         <img src="images/polar5.jpg" alt="Polar">
+        <head>
         <style>
             body {
                background-color: cadetblue;
@@ -23,7 +24,7 @@
                width: 600px;
             }
        </style>
-            
+     </head>       
        
     </header>
     <nav>
