--- a/Advanced_CSS/about.html
+++ b/Advanced_CSS/about.html
@@ -34,7 +34,7 @@
 <h3 class="heading_style">Fun Facts</h3>
 <p>The Polar Express is filled with fascinating details that enhance its magical allure. One interesting fact is that the story was inspired by Chris Van Allsburg’s childhood memories of believing in Santa Claus, reflecting the universal theme of faith in the unseen. The film adaptation, released in 2004, was notable for its use of motion capture technology, setting a new standard for animated films. Additionally, the film's production was a collaborative effort that involved hundreds of artists and technicians, showcasing the dedication behind its visual storytelling. Over the years, The Polar Express has evolved into a cultural phenomenon, with numerous adaptations and events celebrating its legacy. The train rides inspired by the story have spread across various regions, bringing the magic of the North Pole closer to families everywhere. Ultimately, The Polar Express continues to enchant audiences, reminding us all of the joy of believing in the magic of Christmas.</p>
 
-<h 4class="heading_style" >Quotes</h4>
+ 4class="heading_style" >Quotes
 <ul>
     <li>“Seeing is believing, but sometimes the most real things in the world are the things we can't see.”</li>
     <li>“The thing about trains… it doesn’t matter where they’re going. What matters is deciding to get on.”</li>
