--- a/Advanced_CSS/characters.html
+++ b/Advanced_CSS/characters.html
@@ -24,7 +24,7 @@
             <h3 class="heading_style">Portrayed by Tom Hanks</h3>
             <img src="images/conducter.jpeg" alt="Conducter">
             <p>The Conductor is a charismatic and authoritative figure who oversees the Polar Express. With a charming demeanor, he engages the children and guides them through their enchanting journey. He embodies the spirit of Christmas, encouraging everyone to embrace the adventure ahead. His role is crucial in helping the Boy confront his doubts and learn valuable lessons about belief. The Conductor’s steadfast nature instills a sense of wonder and excitement in all the passengers.</p>\
-
+        </main>
 
 
             <hr>
