--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -33,7 +33,7 @@
     </nav>
     <hr>
     <main id="multi._col">
-        <section id="col">
+        <section class="col">
              <h1 class="heading_style">The Magic of The Polar Express</h1>
         <p>Welcome to the enchanting world of The Polar Express! Based on the beloved children’s book by Chris Van Allsburg, this heartwarming story takes readers and viewers on a magical journey to the North Pole. The narrative captures the imagination of children and adults alike, emphasizing the importance of belief and the spirit of Christmas. Whether you’re familiar with the original book, the animated film, or the holiday train rides inspired by the story, The Polar Express holds a special place in the hearts of many. Join us as we explore the story, characters, and the immersive experiences that make this tale a cherished holiday tradition. Dive into the wonder and excitement that The Polar Express brings to life!</p>
 
@@ -44,7 +44,7 @@
 </section>
 
 
-        <aside id="col">
+        <aside
             <h3 class="heading_style" >The Characters</h3>
         
 
