--- a/Responsive/index.html
+++ b/Responsive/index.html
@@ -44,7 +44,7 @@
 </section>
 
 
-        <aside
+        <aside class="col">
             <h3 class="heading_style" >The Characters</h3>
         
 
