--- a/Responsive/trilogy.html
+++ b/Responsive/trilogy.html
@@ -23,11 +23,12 @@
             <h1>Polar Express Trilogy</h1>
 
             <h2>Overview</h2>
-<section id="multi_col">
+<section>
+id="multi_col">
 
  <div class="col">
          <h3>The Polar Express (1985)</h3>
-            <img src="images/download (3).jpeg" alt="Hero Boy">
+            <img src="images/hgf.jpeg" alt="Hero Boy">
             <p>The journey begins with a young boy who, on Christmas Eve, boards a mysterious train bound for the North Pole. Led by a charismatic conductor, the Polar Express takes children on a thrilling adventure through snowy landscapes, where the true meaning of Christmas is revealed. This classic tale encourages readers to believe in the magic of the season—and in themselves.
 
                 The book's hauntingly beautiful illustrations and timeless story have made it a favorite for generations, capturing the spirit of Christmas with its message of faith, wonder, and belief in the impossible.</p>
