--- a/Responsive/trilogy.html
+++ b/Responsive/trilogy.html
@@ -62,6 +62,10 @@ id="multi_col">
             &copy; 2024 Polar Express Project Page
         </footer>
 
+
+        </main>
+
+    </div>
     
     
 </body>
